feat : Split Data

--- a/Student-Mark-Prediction-ML.ipynb
+++ b/Student-Mark-Prediction-ML.ipynb
@@ -533,6 +533,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# split dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of X =  (200, 1)\n",
+      "shape of y =  (200, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = df2.drop(\"student_marks\", axis = \"columns\")\n",
+    "y = df2.drop(\"study_hours\", axis = \"columns\")\n",
+    "print(\"shape of X = \", X.shape)\n",
+    "print(\"shape of y = \", y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of X_train =  (160, 1)\n",
+      "shape of y_train =  (160, 1)\n",
+      "shape of X_test =  (40, 1)\n",
+      "shape of y_test =  (40, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test,y_train,y_test = train_test_split(X,y, test_size = 0.2, random_state=51)\n",
+    "print(\"shape of X_train = \", X_train.shape)\n",
+    "print(\"shape of y_train = \", y_train.shape)\n",
+    "print(\"shape of X_test = \", X_test.shape)\n",
+    "print(\"shape of y_test = \", y_test.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
